@@ -14,7 +14,7 @@ $db->query("CREATE TABLE bar (c1 char, c2 char, c3 char)");
 $db->query("INSERT INTO foo VALUES ('1', '2', '3')");
 $db->query("INSERT INTO bar VALUES ('4', '5', '6')");
 $r = $db->query("SELECT * from foo, bar", SQLITE_ASSOC);
-var_dump($r->fetch_array());
+var_dump($r->fetch());
 ?>
 --EXPECT--
 array(6) {
